--- a/index.html
+++ b/index.html
@@ -195,10 +195,9 @@
 
     function checkAnswer(selectedName, correctName) {
         if (selectedName === correctName) {
-            alert("Richtig!");
             loadNewQuestion();
         } else {
-            alert("Falsch. Versuche es erneut!");
+            alert("Mörrp. Versuche es erneut!");
         }
     }
 
