--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -41,6 +41,7 @@
     </style>
 </head>
 <body>
+     <a href="https://PietPestControl.github.io/Schadinsekten_quiz/">Zurück zum Insekten Quiz</a>
     <div id="quiz-container">
         <h1>Wirkstoff Quiz</h1>
         <div id="quiz-content">
