--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-        }
+               img {
+    max-width: 200px; /* Maximale Breite des Bildes */
+    max-height: 200px; /* Maximale Höhe des Bildes */
+    width: auto; /* Beibehaltung des Seitenverhältnisses */
+    height: auto; /* Beibehaltung des Seitenverhältnisses */
+    display: block; /* Zentrierung */
+    margin: 20px auto; /* Abstand und zentrierte Darstellung */
+    object-fit: contain; /* Passt das Bild an, ohne es zu beschneiden */
+    border: 1px solid #ddd; /* Optional: Rahmen für bessere Sichtbarkeit */
+    border-radius: 20px; /* Optional: Abgerundete Ecken */
+}
         .option {
             margin: 10px 5px;
             padding: 10px 15px;
