--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         if (selectedName === correctName) {
             loadNewQuestion();
         } else {
-            alert("Falsch. Versuche es erneut!");
+            alert("Mörp. Versuche es erneut!");
         }
     }
 
@@ -244,7 +244,7 @@
         if (selectedDevelopment === correctDevelopment) {
             loadNewQuestion();
         } else {
-            alert("Falsch. Versuche es erneut!");
+            alert("Mörrp. Versuche es erneut!");
         }
     }
 
