--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             font-size: 20px;
         }
         .option:hover {
-            background: #0056b3;
+            background: #7ac728;
         }
         .question {
             font-size: 20px;
