--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .option {
             margin: 10px 5px;
             padding: 10px 15px;
-            background: #007BFF;
+            background: #7ac728;
             color: white;
             border: none;
             border-radius: 5px;
