--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
             font-size: 20px;
             margin: 20px 0;
         }
+        /* Füge die Button-Stile hier ein */
+        .quiz-link {
+            display: inline-block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: white;
+            background-color: #7ac728;
+            text-decoration: none;
+            border-radius: 5px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+        .quiz-link:hover {
+            background-color: #5f9e1e;
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
