--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -27,7 +27,7 @@
         .option {
             margin: 10px 5px;
             padding: 10px 15px;
-            background: #007BFF;
+            background: #7ac728;
             color: white;
             border: none;
             border-radius: 5px;
@@ -36,7 +36,7 @@
             font-size: 20px;
         }
         .option:hover {
-            background: #0056b3;
+            background: #7ac728;
         }
     </style>
 </head>
